--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <p id="current-city"></p>
       </nav>
       <main>
+        <section>
+          <img src="/img/James-palm-tree.jpeg" alt="James standing in front of palm tree sign">
+          <p>041135164</p>
+          <p>Mobile Application Design and Development</p>
+          <p>MAD9014 Cross-Platform Web Development</p>
+          <p>I can speak 3 languages</p>
+        </section>
         <div class="weather-card">
           <p>Search for a city to see the current weather.</p>
         </div>
