--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
       <main>
         <section>
-          <img src="/img/James-palm-tree.jpeg" alt="James standing in front of palm tree sign">
+          <img src="./img/James-palm-tree.jpeg" alt="James standing in front of palm tree sign">
           <p>041135164</p>
           <p>Mobile Application Design and Development</p>
           <p>MAD9014 Cross-Platform Web Development</p>
